# ITMO_algorithms_course

./: CMakeLists.txt  README.md  main.cpp  qmake.pro
Kormen/: bublesort.cpp  insertion_sort.cpp  merge_sort.cpp  quicksort.cpp
Observed tasks/: task_1.cpp  task_2.cpp  task_3.cpp
week 1/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
week 2/: task3.py  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
week 3/: task_1.cpp  task_2.cpp
week 4/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
week 5/: task_1.cpp
week 6/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
week 7/: task_1.cpp  task_2.cpp  task_3.cpp
week 8/: task_1.cpp  task_2.cpp  task_3.cpp
week 9/: task_1.cpp  task_2.cpp
